023a: core auth
